# MREmu

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
Android/: build.gradle  local.properties
Android/app/: build.gradle
Android/app/src/main/: AndroidManifest.xml
Android/app/src/main/res/values/: strings.xml  styles.xml
Android/gradle/wrapper/: gradle-wrapper.properties
MREmu/: ARModule.cpp  ARModule.h  ARModuleBin.h  App.cpp  App.h  AppManager.cpp  AppManager.h  ArmApp.cpp  ArmApp.h  Bridge.cpp  Bridge.h  CMakeLists.txt  Cpu.cpp  Cpu.h  DLLApp.cpp  DLLApp.h  Disassembler.cpp  Disassembler.h  GDB.cpp  GDB.h  Keyboard.cpp  Keyboard.h  MREmu.cpp  MREmu.h  Memory.cpp  Memory.h  MreTags.cpp  MreTags.h  miniz.h  mutex_wrapper.h
MREmu/MREngine/: Audio.cpp  Audio.h  AudioBitstream.cpp  AudioBitstreamRec.cpp  CMakeLists.txt  CharSet.cpp  CharSet.h  Graphic.cpp  Graphic.h  IO.cpp  IO.h  ItemsMng.h  ProgramManager.cpp  Resources.cpp  Resources.h  SIM.cpp  SIM.h  STDLib.cpp  Sock.cpp  Sock.h  System.cpp  System.h  Textout.cpp  Timer.cpp  Timer.h
imgui/: CMakeLists.txt  imgui-SFML.cpp
sub/ARModule/: Makefile  main.c  scat.ld
sub/FontHexToBin/: .gitignore  CMakeLists.txt  main.cpp  to_h.sh  unifont-15.1.04.hex
